# e1

./: .env.example  .gitignore  1START.BAT  2RESTART.BAT  3STOP.BAT  AUDIT_2026-04-13.md  AUTH_LOADING_FIX_SUMMARY.md  CLAUDE.md  CLEAN-NEXT-WEB.bat  CODE_AUDIT_RECOMMENDATIONS.html  COMPREHENSIVE_AUDIT_AND_PLAN.md  CURRENT_ROADMAP.md  DEBUG_RIPPLE_PROMPT.md  DESIGN.md  DESIGN_FIXES_SUMMARY.md  DEV-STACK.bat  ENTITY.md  ENTITY3.MD  EPIC-ADMIN-DASHBOARD-PROMPT.md  FEATURES.md  HOMEPAGE_CODE.txt  HOSTING_RECOMMENDATIONS.md  HOW_TO_OPEN_MODELS.md  IMPLEMENTATION_REPORT.md  INGEST-STOCK-MEDIA.bat  LAUNCHER.bat  LAUNCHER_RU.bat  LOVNGE-DEV.bat  PHOTO-UPLOAD-FIX.md  PROGRESS_2026-03-20.md  PROGRESS_SAVE.md  PROJECT_COMPLETION_REPORT.md  PROJECT_DOCUMENTATION.html  PROJECT_SNAPSHOT.md  PROJECT_SNAPSHOT_FOR_AI_CODER.md  QUICK_START.md  README.md  README_LAUNCHER.md  RIPPLE_PAGE_SNAPSHOT.txt  ROAD326.html  (+77 more)
enso-develop/: .bazelignore  .bazelrc  .envrc  .gitignore  .gitmodules  .jvmopts  .pnpmfile.cjs  .prettierignore  .prettierrc.yaml  BUILD.bazel  CHANGELOG.md  Cargo.toml  MODULE.bazel  README.md  build.sbt  eslint.config.mjs  flake.nix  git-clean.mjs  maven_install.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run  run.cmd  run.ps1  rust-toolchain.toml  rustfmt.toml  tech-stack.html  tsconfig.json  wasm_bindgen.patch
enso-develop/.cargo/: config.toml
enso-develop/.github/: CODEOWNERS
enso-develop/.github/ISSUE_TEMPLATE/: config.yml
enso-develop/.github/workflows/: changelog.yml  engine-benchmark.yml  engine-changed-files.yml  engine-checks-nightly.yml  engine-checks.yml  engine-pull-request.yml  enso4igv.yml  extra-nightly-tests.yml  formatting.yml  gui-changed-files.yml  gui-checks.yml  gui-pull-request.yml  ide-changed-files.yml  ide-packaging.yml  ide-pull-request.yml  promote.yml  release.yml  std-libs-benchmark.yml  std-libs-labels.yml  wasm-changed-files.yml  wasm-checks.yml  wasm-pull-request.yml
enso-develop/app/: modules.d.ts
enso-develop/app/common/: BUILD.bazel  package.json  tsconfig.json
enso-develop/app/electron-client/: BUILD.bazel  buildInfo.ts  electron-builder-config.cjs  electron-builder-config.ts  esbuild.config.mjs  esbuildConfig.ts  package.json  paths.ts  playwright.config.ts  tsconfig.json  vitest.config.ts  watch.ts
enso-develop/app/gui/: .env.bazel  .env.development  .env.npekin  .env.pbuchu  .env.production  .env.staging  .env.testing  .gitignore  BUILD.bazel  env.d.ts  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.app.vitest.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.test.config.ts  vitest.config.ts
enso-develop/app/lang-markdown/: package.json  tsconfig.json
enso-develop/app/lezer-markdown/: BUILD.bazel  package.json
enso-develop/app/project-manager-shim/: package.json  tsconfig.json
enso-develop/app/rust-ffi/: BUILD.bazel  Cargo.toml
enso-develop/app/table-expression/: BUILD.bazel  package.json  tsconfig.json
enso-develop/app/ydoc-server/: package.json
enso-develop/app/ydoc-server-polyglot/: BUILD.bazel  package.json
enso-develop/app/ydoc-shared/: BUILD.bazel  package.json
enso-develop/bazel_scripts/: python_extract.bzl  run_engine_distribution.bzl  secrets.bzl  stdlibs.bzl
enso-develop/build_tools/: README.md
enso-develop/build_tools/base/: BUILD.bazel  Cargo.toml
enso-develop/build_tools/ci-gen/: Cargo.toml
enso-develop/build_tools/ci_utils/: BUILD.bazel  Cargo.toml
enso-develop/build_tools/cli/: BUILD.bazel  Cargo.toml
enso-develop/build_tools/enso-formatter/: BUILD.bazel  Cargo.toml
enso-develop/build_tools/install/: Cargo.toml  build.rs
enso-develop/distribution/: manifest.template.yaml
enso-develop/docs/: CONTRIBUTING.md  README.md  runtime-guide.md
enso-develop/docs/cloud/: README.md  testing.md
enso-develop/docs/debugger/: README.md  chrome-devtools.md  dap.md  native-debugging.md  runtime-debugging.md
enso-develop/docs/distribution/: bundles.md  distribution.md  launcher.md  licenses.md
enso-develop/docs/infrastructure/: README.md  benchmarks.md  dual_jvm.md  logging.md  native-image.md  rust.md  upgrading-graalvm.md
enso-develop/docs/integrations/: README.md  microsoft-365.md  strava.md
enso-develop/docs/language-server/: protocol-language-server.md  protocol-project-manager.md
enso-develop/docs/libraries/: README.md  database-ir.md  generic-jdbc-driver.md  repositories.md
enso-develop/docs/parser/: README.md  ast.md  testing.md
enso-develop/docs/polyglot/: README.md  polyglot-bindings.md  typing-polyglot-bindings.md
enso-develop/docs/profiler/: engine-startup.md
enso-develop/docs/runtime/: compiler-ir.md  ir-caching.md  runtime-features.md
enso-develop/docs/semantics/: encapsulation.md  managed-resources.md
enso-develop/docs/style-guide/: enso.md
enso-develop/docs/syntax/: README.md  comments.md  function-parameters.md  functions.md
enso-develop/docs/types/: dynamic-dispatch.md  errors.md  goals.md  hierarchy.md  inference-and-checking.md  intersection-types.md  references.md
enso-develop/internal/: BUILD.bazel  envReplacer.mjs  stampFiles.bzl  workspaceStatus.mjs
enso-develop/nix/patches/: apple_cc_toolchain.patch  bazel_actions_path.patch  deps_patches.patch  xcode.patch
enso-develop/patches/: rules_graalvm_java25.patch  rules_graalvm_tool_toolchain.patch
enso-develop/project/: BazelSupport.scala  BenchTasks.scala  Cargo.scala  CustomLogManager.scala  Dependencies.scala  DistributionPackage.scala  Editions.scala  EnsoLint.scala  EnsoProjects.scala  FrgaalJavaCompiler.scala  GraalVM.scala  IRCaches.scala  JARUtils.scala  JPMSPlugin.scala  JPMSUtils.scala  JarExtractPlugin.scala  JarExtractor.scala  NativeImage.scala  Platform.scala  SmallJDK.scala  StdBits.scala  WithDebugCommand.scala  Ydoc.scala  plugins.sbt
enso-develop/test/AWS_Tests/: README.md
enso-develop/test/Base_Tests/: BUILD.bazel  README.md
enso-develop/test/Benchmarks/: package.yaml
enso-develop/test/Cloud_Tests/: README.md  package.yaml
enso-develop/test/DuckDB_Tests/: package.yaml
(+5149 files in other folders)
