load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//:bazel_scripts/run_engine_distribution.bzl", "ensure_native_enso", "run_enso")
load("//:bazel_scripts/stdlibs.bzl", "stdlib_source_patterns")
load("//toolchains/sbt:run_sbt.bzl", "run_sbt")

exports_files([
    ".node-version",
    "build-config.yaml",
])

npm_link_all_packages()

config_setting(
    name = "stamping",
    values = {"stamp": "1"},
    visibility = ["//visibility:public"],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)

write_source_files(
    name = "write_all",
    additional_update_targets = [
        "//app/rust-ffi:write_wasm_dist",
        "//app/ydoc-shared:write_ast_codegen",
        "//app/gui:write_icon_metadata",
        "//app/table-expression:write_parser_codegen",
    ],
)

##################
### Buildifier ###
##################

buildifier(
    name = "lint_bazel_files",
    exclude_patterns = [
        "./app/gui/.env.bazel",
    ],
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "format_bazel_files",
    exclude_patterns = [
        "./app/gui/.env.bazel",
    ],
    lint_mode = "fix",
    mode = "fix",
)

###########################
### Engine distribution ###
###########################

STDLIB_SOURCES = glob(
    stdlib_source_patterns(),
    allow_empty = True,
)

SBT_PROJECT_FILES = [
    ".scalafmt.conf",
    "build.sbt",
    "project/plugins.sbt",
    "project/build.properties",
] + glob([
    "project/*.scala",
    "project/src/**",
])

# TODO: some dependencies might be unnecessary here, but checking everything is time-consuming.
ENGINE_DIST_SOURCES = STDLIB_SOURCES + SBT_PROJECT_FILES + [
    "distribution/manifest.template.yaml",
    "distribution/launcher-manifest.yaml",
    "distribution/enso.bundle.template",
    "distribution/bin/enso",
    "distribution/bin/enso.bat",
    "//lib/java/python-extract:extract_python_resources",
    "//lib/rust/parser/jni:shared_lib",
    "//lib/rust/parser:generate_java",
    "//lib/rust/parser/generate-java:enso_parser_generate_java_srcs",
    "//app/ydoc-server-polyglot:dist",
] + glob([
    "engine/common/src/**",
    "engine/language-server/src/**",
    "engine/launcher/src/**",
    "engine/polyglot-api/src/**",
    "engine/polyglot-api-macros/src/**",
    "engine/python-resource-provider/src/**",
    "engine/runner/src/**",
    "engine/runner-common/src/**",
    "engine/runtime/src/**",
    "engine/runtime-compiler/src/**",
    "engine/runtime-compiler-dump/src/**",
    "engine/runtime-compiler-dump-igv/src/**",
    "engine/runtime-instrument-common/src/**",
    "engine/runtime-instrument-id-execution/src/**",
    "engine/runtime-instrument-repl-debugger/src/**",
    "engine/runtime-instrument-runtime-server/src/**",
    "engine/runtime-language-arrow/src/**",
    "engine/runtime-language-epb/src/**",
    "engine/runtime-parser/src/**",
    "engine/runtime-parser-dsl/src/**",
    "engine/runtime-parser-processor/src/**",
    "engine/runtime-suggestions/src/**",
    "engine/runtime-test-instruments/src/**",
    "distribution/engine/THIRD-PARTY/**",
    "lib/java/akka-wrapper/src/**",
    "lib/java/fansi-wrapper/src/**",
    "lib/java/interpreter-dsl/src/**",
    "lib/java/jna-wrapper/src/**",
    "lib/java/jvm-channel/src/**",
    "lib/java/jvm-interop/src/**",
    "lib/java/language-server-deps-wrapper/src/**",
    "lib/java/logging-service-common/src/**",
    "lib/java/logging-service-opensearch/src/**",
    "lib/java/logging-service-telemetry/src/**",
    "lib/java/os-environment/src/**",
    "lib/java/persistance/src/**",
    "lib/java/persistance-dsl/src/**",
    "lib/java/poi-wrapper/src/**",
    "lib/java/runtime-utils/src/**",
    "lib/java/scala-libs-wrapper/src/**",
    "lib/java/ydoc-polyfill/src/**",
    "lib/java/ydoc-server/src/**",
    "lib/java/ydoc-server-registration/src/**",
    "lib/java/zio-wrapper/src/**",
    "lib/scala/cli/src/**",
    "lib/scala/common-polyglot-core-utils/src/**",
    "lib/scala/connected-lock-manager/src/**",
    "lib/scala/connected-lock-manager-server/src/**",
    "lib/scala/distribution-manager/src/**",
    "lib/scala/downloader/src/**",
    "lib/scala/edition-updater/src/**",
    "lib/scala/editions/src/**",
    "lib/scala/filewatcher/src/**",
    "lib/scala/json-rpc-server/src/**",
    "lib/scala/library-manager/src/**",
    "lib/scala/logging-config/src/**",
    "lib/scala/logging-service/src/**",
    "lib/scala/logging-service-logback/src/**",
    "lib/scala/logging-truffle-connector/src/**",
    "lib/scala/logging-utils/src/**",
    "lib/scala/logging-utils-akka/src/**",
    "lib/scala/pkg/src/**",
    "lib/scala/process-utils/src/**",
    "lib/scala/profiling-utils/src/**",
    "lib/scala/refactoring-utils/src/**",
    "lib/scala/runtime-version-manager/src/**",
    "lib/scala/searcher/src/**",
    "lib/scala/semver/src/**",
    "lib/scala/task-progress-notifications/src/**",
    "lib/scala/text-buffer/src/**",
    "lib/scala/version-output/src/**",
    "lib/scala/yaml/src/**",
    "std-bits/aws/src/**",
    "std-bits/base/src/**",
    "std-bits/benchmarks/src/**",
    "std-bits/database/src/**",
    "std-bits/google/src/**",
    "std-bits/image/src/**",
    "std-bits/duckdb/src/**",
    "std-bits/microsoft/src/**",
    "std-bits/snowflake/src/**",
    "std-bits/table/src/**",
    "std-bits/tableau/src/**",
])

SBT_BOOT_DIR = "$$TMPDIR/.sbt/boot"

SBT_IVY_HOME = "$$TMPDIR/.ivy2"

SBT_COURSIER_HOME = "$$TMPDIR/.coursier"

SBT_GLOBAL_BASE = "$$TMPDIR"

SBT_LOCAL_REPOS = "$$TMPDIR/.sbt/repositories"

SBT_SYSTEM_PROPS = [
    "-Dsbt.repositories.local=" + SBT_LOCAL_REPOS,
    "-Dsbt.global.base=" + SBT_GLOBAL_BASE,
    "-Dsbt.boot.directory=" + SBT_BOOT_DIR,
    "-Dsbt.ivy.home=" + SBT_IVY_HOME,
    "-Dsbt.coursier.home=" + SBT_COURSIER_HOME,
    # Copied from .jvmopts
    # TODO: Create a rule that reads that file?
    "-Xss16M",
    "-Xmx4G",
    "-XX:+UseCompressedOops",
    "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
    "--add-exports=jdk.graal.compiler/jdk.graal.compiler.graphio=ALL-UNNAMED",
    "--enable-native-access=ALL-UNNAMED",
    "--sun-misc-unsafe-memory-access=allow",
]

# These system properties are needed so that sbt will known that it runs as a subprocess of Bazel.
# In such case, it will avoid running `cargo` or `pnpm` commands on its own,
# instead, it will expect that all the necessary artifacts are already provided
# by Bazel via system properties. See docs in `project/BazelSupport.scala`.
EXTRA_SYSTEM_PROPS = [
    "-Denso.BazelSupport.enabled=true",
    "-Denso.BazelSupport.home=$(BINDIR)/home",
    "-Denso.BazelSupport.parser.javaSrcDir=$(location //lib/rust/parser:generate_java)",
    "-Denso.BazelSupport.parser.lib=$(location //lib/rust/parser/jni:shared_lib)",
    "-Denso.BazelSupport.python.resourceDir=$(location //lib/java/python-extract:extract_python_resources)",
    "-Denso.BazelSupport.ydocServer.polyglotMainJs=$(location //app/ydoc-server-polyglot:dist)",
]

SMALL_JDK_SYSTEM_PROPS = [
    "-Denso.BazelSupport.enabled=true",
    "-Denso.BazelSupport.home=$(BINDIR)/home",
]

ENV = {
    "JAVA_HOME": "$(JAVABASE)",
    "PATH": "$(FLATC_PATH):$(JAVABASE)/bin:$$PATH",
    "LC_ALL": "C.UTF-8",
    "SBT_SERVER_FORCESTART": "1",
}

NATIVE_IMAGE_ENV = dict(
    ENV,
    ENSO_LAUNCHER = "native",
)

run_sbt(
    name = "sbt_build_engine_distribution",
    srcs = ENGINE_DIST_SOURCES,
    args = [
        "buildEngineDistribution",
    ],
    env = ENV,
    out_dir = "built-distribution",
    system_props = SBT_SYSTEM_PROPS + EXTRA_SYSTEM_PROPS,
    visibility = ["//visibility:public"],
)

run_sbt(
    name = "sbt_build_native_engine_distribution",
    srcs = ENGINE_DIST_SOURCES,
    args = [
        "buildEngineDistribution",
    ],
    env = NATIVE_IMAGE_ENV,
    out_dir = "built-distribution-native",
    system_props = SBT_SYSTEM_PROPS + EXTRA_SYSTEM_PROPS,
    visibility = ["//visibility:public"],
)

run_sbt(
    name = "sbt_build_small_jdk",
    srcs = SBT_PROJECT_FILES,
    args = [
        "buildSmallJdkForRelease",
    ],
    env = ENV,
    out_dir = "built-small-jdk",
    system_props = SBT_SYSTEM_PROPS + SMALL_JDK_SYSTEM_PROPS,
    visibility = ["//visibility:public"],
)

# This is just a sanity check that runs equivalent of `enso --run test/Base_Tests/**/Maybe_Spec.enso`.
run_enso(
    name = "run_enso_test",
    src = "//test/Base_Tests:maybe_spec",
    distribution = ":sbt_build_native_engine_distribution",
    run_args = [
        "--no-ir-caches",
    ],
)

# Sanity check that ensure that the distribution was built with native image.
ensure_native_enso(
    name = "ensure_native_enso",
    distribution = ":sbt_build_native_engine_distribution",
    visibility = ["//visibility:public"],
)
