"enso-org/enso"

##########################################
### Buildifier: checking bazel configs ###
##########################################

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.0.2",
    dev_dependency = True,
)

############################
### JavaScript ecosystem ###
############################

bazel_dep(name = "aspect_rules_js", version = "2.5.0")
bazel_dep(name = "aspect_rules_ts", version = "3.7.0")
bazel_dep(name = "rules_nodejs", version = "6.3.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_cc", version = "0.2.12")
bazel_dep(name = "zlib", version = "1.3.1.bcr.7")
bazel_dep(name = "aspect_rules_esbuild", version = "0.22.1")

## Node.js
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.11.0")

tar_toolchain = use_extension("//toolchains:tar/extensions.bzl", "tar_toolchain")
use_repo(tar_toolchain, "tar_toolchain")

register_toolchains("//toolchains:windows_builtin_tar_toolchain")

## Npm
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

## TypeScript
rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

############
### RUST ###
############
bazel_dep(name = "rules_rust", version = "0.66.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = ["wasm32-unknown-unknown"],
    versions = ["1.90.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Add wasm_bindgen toolchain, patch it to shorten the dirnames and avoid max_path issues
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.66.0")
single_version_override(
    module_name = "rules_rust_wasm_bindgen",
    patches = ["wasm_bindgen.patch"],
)

register_toolchains("@rules_rust_wasm_bindgen//:default_wasm_bindgen_toolchain")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_config = "//:.cargo/config.toml",
    cargo_lockfile = "//:Cargo.lock",
    isolated = False,
    manifests = [
        "//:build_tools/ci-gen/Cargo.toml",
        "//:build_tools/cli/Cargo.toml",
        "//:build_tools/install/Cargo.toml",
        "//:build_tools/install/config/Cargo.toml",
        "//:build_tools/install/installer/Cargo.toml",
        "//:build_tools/install/uninstaller/Cargo.toml",
        "//:build_tools/macros/lib/Cargo.toml",
        "//:Cargo.toml",
        "//:lib/rust/launcher-shims/Cargo.toml",
        "//:lib/rust/macro-utils/Cargo.toml",
        "//:lib/rust/metamodel/Cargo.toml",
        "//:lib/rust/parser/debug/Cargo.toml",
        "//:lib/rust/parser/generate-java/Cargo.toml",
        "//:lib/rust/parser/jni/Cargo.toml",
        "//:lib/rust/parser/schema/Cargo.toml",
        "//:lib/rust/parser/src/syntax/tree/visitor/Cargo.toml",
        "//:lib/rust/parser/macros/Cargo.toml",
        "//:lib/rust/prelude/Cargo.toml",
        "//:lib/rust/prelude/macros/Cargo.toml",
        "//:lib/rust/reflect/Cargo.toml",
        "//:lib/rust/zst/Cargo.toml",
        "//:lib/rust/parser/debug/fuzz/Cargo.toml",
        "//:tools/language-server/logstat/Cargo.toml",
        "//:tools/language-server/wstest/Cargo.toml",
        "//app/rust-ffi:Cargo.toml",
    ],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "wasm32-unknown-unknown",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
        "x86_64-apple-darwin",
    ],
)
use_repo(crate, "crates")

#############
### Flatc ###
#############

flatc_ext = use_extension("//toolchains/flatc:extensions.bzl", "flatc_toolchain")
use_repo(flatc_ext, "flatc_toolchain_linux_x86_64", "flatc_toolchain_macos_aarch64", "flatc_toolchain_macos_x86_64", "flatc_toolchain_windows_x86_64")

register_toolchains(
    "@flatc_toolchain_macos_x86_64//:toolchain",
    "@flatc_toolchain_macos_aarch64//:toolchain",
    "@flatc_toolchain_linux_x86_64//:toolchain",
    "@flatc_toolchain_windows_x86_64//:toolchain",
)

###########
### JVM ###
###########

bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_graalvm", version = "0.11.2")

# The latest version of rules_graalvm does not support Java 24.
# Also, it does not export the @bazel_tools//tools/jdk:toolchain_type
#   toolchain that can be used with standard java_binary rules.
git_override(
    module_name = "rules_graalvm",
    commit = "81fc9b2de33c0429b716f1bfcd3223a82c0e1085",
    patch_strip = 1,
    patches = [
        "patches/rules_graalvm_java25.patch",
        "patches/rules_graalvm_tool_toolchain.patch",
    ],
    remote = "https://github.com/sgammon/rules_graalvm.git",
)

gvm = use_extension("@rules_graalvm//:extensions.bzl", "graalvm")
gvm.graalvm(
    name = "graalvm",
    distribution = "ce",  # `oracle`, `ce`, or `community`
    java_version = "25",  # `17`, `20`, `21`, or `22` as supported by the version provided
    version = "25.0.1",  # gvm sdk version format like `24.x.x` also supported
)
use_repo(gvm, "graalvm")

register_toolchains(
    "@graalvm//:jvm",
    "@graalvm//:sdk",
    "@graalvm//:toolchain",
    "@graalvm//:tool_toolchain",
    "@graalvm//:bootstrap_runtime_toolchain",
)

bazel_dep(name = "rules_jvm_external", version = "6.3")

sbt_ext = use_extension("//toolchains/sbt:extensions.bzl", "sbt_ext")
use_repo(sbt_ext, "sbt_repo")

register_toolchains("@sbt_repo//:toolchain")

scala_logging_version = "3.9.4"

scalatest_version = "3.3.0-SNAP4"

cats_version = "2.9.0"

circe_version = "0.14.5"

circe_libs = [
    "circe-core",
    "circe-generic",
    "circe-parser",
]

circe = ["io.circe:%s_2.13:%s" % (x, circe_version) for x in circe_libs]

graal_maven_packages_version = "24.2.0"

commons_text_version = "1.10.0"

http_components_version = "4.4.1"

jackson_version = "2.15.2"

commons_io_version = "2.12.0"

commons_compress_version = "1.23.0"

commons_lang_version = "3.12.0"

junit_version = "4.13.2"

hamcrest_version = "1.3"

picocli_version = "4.6.1"

minimal_json_version = "0.9.5"

## TODO: Consider replacing maven extension with
## https://github.com/bazeltools/bazel-deps
## The downside of the approach is that a number of other rules rely on it.
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

## After updating a list of artifacts run
## > bazel run @unpinned_maven//:pin
maven.install(
    artifacts = [
        "org.graalvm.python:python-language:%s" % graal_maven_packages_version,
        "org.graalvm.python:python-resources:%s" % graal_maven_packages_version,
        "com.typesafe.scala-logging:scala-logging_2.13:%s" % scala_logging_version,
        "org.scalatest:scalatest_2.13:%s" % scalatest_version,
        "org.typelevel:cats-core_2.13:%s" % cats_version,
        "org.apache.commons:commons-text:%s" % commons_text_version,
        "org.apache.httpcomponents:httpclient:%s" % http_components_version,
        "com.fasterxml.jackson.core:jackson-databind:%s" % jackson_version,
        "commons-io:commons-io:%s" % commons_io_version,
        "org.apache.commons:commons-compress:%s" % commons_compress_version,
        "org.apache.commons:commons-lang3:%s" % commons_lang_version,
        "junit:junit:%s" % junit_version,
        "org.hamcrest:hamcrest-all:%s" % hamcrest_version,

        ## bazel-distribution dependencies
        "info.picocli:picocli:%s" % picocli_version,
        "com.eclipsesource.minimal-json:minimal-json:%s" % minimal_json_version,
    ] + circe,
    fail_if_repin_required = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo.maven.apache.org/maven2",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(
    maven,
    "maven",
    "unpinned_maven",
)

#############
### Scala ###
#############

### TODO: This setup is untested and probably does not work.

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_scala", version = "7.0.0", repo_name = "io_bazel_rules_scala")

scala_config = use_extension(
    "@io_bazel_rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = "2.13.16")

scala_deps = use_extension(
    "@io_bazel_rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.scala()

###################
### ENVIRONMENT ###
###################
secrets = use_extension("//:bazel_scripts/secrets.bzl", "secrets")
secrets.environment_repo(
    name = "env",
    entries = {
        "NODE_ENV": "production",
    },
)
use_repo(secrets, "env")
