load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@env//:defs.bzl", "getenv")
load("@npm//:defs.bzl", "npm_link_all_packages", "npm_link_targets")
load("@npm//app/gui:vite/package_json.bzl", vite_bin = "bin")
load("//internal:stampFiles.bzl", "stamp_files")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig"],
)

ts_config(
    name = "tsconfig_node",
    src = "tsconfig.node.json",
    deps = [":tsconfig"],
)

ts_config(
    name = "tsconfig_app",
    src = "tsconfig.app.json",
    deps = [":tsconfig"],
)

ts_config(
    name = "tsconfig_scripts",
    src = "tsconfig.scripts.json",
)

ts_config(
    name = "tsconfig_app_vitest",
    src = "tsconfig.app.vitest.json",
    deps = [":tsconfig_app"],
)

ICON_GENERATED_DIR = "src/project-view/util/iconMetadata"

SRCS = [
    "//:tsconfig",
    ":tsconfig",
    ":tsconfig_app",
    ":tsconfig_node",
    ":tsconfig_app_vitest",
    ":tsconfig_scripts",
    ":icon_metadata",
    "vite.config.ts",
    "tailwind.config.ts",
    "package.json",
    "index.html",
] + glob(
    [
        "src/**",
        "public/**",
        "project-manager-shim-middleware/**",
    ],
    [ICON_GENERATED_DIR + "/**"],
) + npm_link_targets()

npm_package(
    name = "pkg",
    srcs = SRCS,
    visibility = ["//visibility:public"],
)

ENV_FILES = glob([".env*"])

# When stamping, `--mode=bazel` will inject placeholders into the code base which will be replaced later by `stamp_files` rule.
_vite_args = select({
    "//:stamping": [
        "build",
        "--mode=bazel",
    ],
    "//conditions:default": [
        "build",
        "--mode=production",
    ],
})

# When stamping, `NODE_ENV` is not important (but should be stable).
# The correct `.env` file to use is chosen by the `workspaceStatus` script.
_vite_env = select({
    "//:stamping": {
        "NODE_ENV": "production",
        "NODE_OPTIONS": "--max-old-space-size=6144",
    },
    "//conditions:default": {
        "NODE_ENV": getenv("NODE_ENV"),
        "NODE_OPTIONS": "--max-old-space-size=6144",
    },
})

vite_bin.vite(
    name = "dist",
    srcs = SRCS + ENV_FILES,
    args = _vite_args,
    chdir = package_name(),
    env = _vite_env,
    out_dirs = ["dist"],
    visibility = ["//visibility:public"],
)

vite_bin.vite_binary(
    name = "vite_preview",
    args = [
        "preview",
        "--outDir",
        "../../$(rootpath :dist)",
    ],
    chdir = package_name(),
    data = [
        "vite.config.ts",
        ":dist",
    ],
)

vite_bin.vite_binary(
    name = "dev_server",
    chdir = package_name(),
    data = SRCS,
    # Under ibazel, let vite hot-reload changed files rather than restart it
    tags = ["ibazel_notify_changes"],
)

js_binary(
    name = "script_generate_icon_metadata",
    entry_point = "scripts/generateIconMetadata.mjs",
)

js_run_binary(
    name = "icon_metadata",
    srcs = ["src/project-view/assets/icons.svg"],
    chdir = package_name(),
    out_dirs = [ICON_GENERATED_DIR],
    tool = ":script_generate_icon_metadata",
    visibility = ["//visibility:public"],
)

stamp_files(
    name = "dist_stamped",
    srcs = [
        ":dist",
    ],
    out = "dist_stamped",
    files_regex = "config(-[0-9a-zA-Z]+)?\\.js$|index\\.html$",
    input_dir = "$(location :dist)",
    visibility = ["//visibility:public"],
)

# Convenience rule to output built artifacts to the filesystem, so JS tooling can see them.
# Important! Make sure the output of this rule is NOT used during the build process, which
# is currently ensured by ICON_GENERATED_DIR definition being used as an glob exclusion
# in `SRC` definition.
write_source_files(
    name = "write_icon_metadata",
    files = {
        ICON_GENERATED_DIR: ":icon_metadata",
    },
    suggested_update_target = "//:write_all",
    visibility = ["//visibility:public"],
)
