[package]
name = "rust-ffi"
version = "0.1.0"
edition = "2024"
authors = ["Enso Team <contact@enso.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
enso-parser = { path = "../../lib/rust/parser" }
# This must exactly match our `rules_rust_wasm_bindgen` toolchain; wasm-bindgen patch updates can change the version
# number of an internal format, leading to incompatibility between some patch releases that causes GUI build to fail.
wasm-bindgen = { version = "=0.2.100", default-features = false }
serde_json = { workspace = true }
console_error_panic_hook = { workspace = true }

[lints]
workspace = true
