load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "enso_build_cli",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = [
            "src/bin/**/*.rs",
            "src/main.rs",
        ],
    ),
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//build_tools/base:enso_build_base",
        "//build_tools/build:enso_build",
        "//build_tools/ci_utils:ide_ci",
        "//build_tools/enso-formatter:enso_formatter",
    ],
)

rust_binary(
    name = "enso_build_cli_bin",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        ":enso_build_cli",
        "//build_tools/base:enso_build_base",
        "//build_tools/build:enso_build",
        "//build_tools/ci_utils:ide_ci",
    ],
)
