load("@bazel_skylib//rules:select_file.bzl", "select_file")
load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")

rust_shared_library(
    name = "enso_parser_jni",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_name = "enso_parser",
    edition = "2024",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True) + [
        "//lib/rust/parser:enso_parser",
        "//lib/rust/prelude:enso_prelude",
    ],
)

select_file(
    name = "shared_lib",
    srcs = ":enso_parser_jni",
    subpath = select({
        "@platforms//os:linux": "enso_parser.so",
        "@platforms//os:windows": "enso_parser.dll",
        "@platforms//os:macos": "enso_parser.dylib",
    }),
    visibility = ["//visibility:public"],
)
